--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "veteran-sisters-support-website",
-  "version": "0.1.0",
-  "private": true,
+  "name": "dfm-sideline-sidekick-app-backend",
+  "version": "1.0.0",
+  "description": "Backend for the DFM Sideline Sidekick app being developed by Triton Software Engineering at UCSD.",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
     "check-git-hooks": "cd .. && node .secret-scan/secret-scan.js -- --check-git-hooks",
     "format": "npm run check-git-hooks && prettier --write .",
     "lint-fix": "npm run check-git-hooks && (eslint --fix --cache --report-unused-disable-directives . || true) && prettier --write .",
@@ -14,23 +14,20 @@
     "prepare": "cd .. && husky"
   },
   "dependencies": {
-    "next": "15.1.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3",
+    "nodemon": "^3.0.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1",
+    "@eslint/js": "^9.17.0",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^15.1.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
+    "globals": "^15.14.0",
     "husky": "^9.1.7",
     "prettier": "^3.4.2",
-    "typescript": "^5"
+    "typescript-eslint": "^8.19.1"
   }
 }
