--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "prepare": "cd .. && husky"
   },
   "dependencies": {
+    "firebase": "^11.1.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
