--- a/.gitignore
+++ b/.gitignore
@@ -52,8 +52,7 @@ web_modules/
 .npm
 
 # Optional eslint cache
-.eslintcache
-frontend/.eslintcache
+*.eslintcache
 
 # Optional stylelint cache
 .stylelintcache
