--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "prepare": "cd .. && husky"
   },
   "dependencies": {
+    "@fontsource/albert-sans": "^5.1.1",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
