--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^11.2.0",
+    "firebase-admin": "^13.0.2",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
