--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "firebase": "^11.1.0",
     "next": "15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-pdf": "^9.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
