--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "format": "npm run check-git-hooks && prettier --write .",
     "lint-fix": "npm run check-git-hooks && (eslint --fix --cache --report-unused-disable-directives . || true) && prettier --write .",
     "lint-check": "npm run check-git-hooks && eslint --cache --report-unused-disable-directives . && prettier --check .",
-    "prepare": "cd .. && husky"
+    "prepare": "node -e \"if (!process.env.GOOGLE_FUNCTION_TARGET) require('child_process').execSync('cd .. && husky', { stdio: 'inherit' })\""
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
+    "firebase-functions": "^6.3.2",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
