--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.8.1",
     "firebase": "^11.2.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.1.5"
   }
 }
