--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
+    "firebase-functions": "^6.3.2",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
