--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dfm-sideline-sidekick-app-backend",
+  "name": "veteran-sisters-website-backend",
   "version": "1.0.0",
-  "description": "Backend for the DFM Sideline Sidekick app being developed by Triton Software Engineering at UCSD.",
+  "description": "Backend for the Veteran Sisters website being developed by Triton Software Engineering at UCSD.",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -11,7 +11,7 @@
     "format": "npm run check-git-hooks && prettier --write .",
     "lint-fix": "npm run check-git-hooks && (eslint --fix --cache --report-unused-disable-directives . || true) && prettier --write .",
     "lint-check": "npm run check-git-hooks && eslint --cache --report-unused-disable-directives . && prettier --check .",
-    "prepare": "cd .. && husky"
+    "prepare": "node -e \"if (!process.env.GOOGLE_FUNCTION_TARGET) require('child_process').execSync('cd .. && husky', { stdio: 'inherit' })\""
   },
   "dependencies": {
     "cors": "^2.8.5",
