--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "firebase": "^11.2.0",
+    "firebase-admin": "^12.0.0",
+    "firebase-frameworks": "^0.11.0",
     "react-router-dom": "^7.1.5"
   }
 }
