--- a/firebase.json
+++ b/firebase.json
@@ -1,14 +1,11 @@
 {
     "hosting": {
-      "source": "frontend",
+      "public": "frontend/out",
       "ignore": [
         "firebase.json",
         "**/.*",
         "**/node_modules/**"
       ],
-      "frameworksBackend": {
-        "region": "us-west1"
-      },
       "rewrites": [
           {
           "source": "/api/**",
@@ -16,6 +13,10 @@
               "functionId": "backend",
               "pinTag": true
           }
+          },
+          {
+            "source": "**",
+            "destination": "/index.html"
           }
       ]
     },
