--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,9 +14,8 @@ jobs:
         run: |
           cd frontend
           touch .env
-          echo "NEXT_PUBLIC_FIREBASE=$FIREBASE_FRONTEND"
-          echo "NEXT_PUBLIC_API_URL=/api"
-          cat .env
+          echo "NEXT_PUBLIC_FIREBASE=$FIREBASE_FRONTEND" >> .env
+          echo "NEXT_PUBLIC_API_URL=/api" >> .env
           npm ci 
           npm run build
       - name: Install backend dependencies
@@ -28,7 +27,6 @@ jobs:
           touch .env
           echo "DATABASE_URL=$MONGO_URL" >> .env
           echo "BACKEND_FIREBASE_SERVICE_ACCOUNT=$FIREBASE_SERVICE" >> .env
-          cat .env
           npm ci
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
