--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "firebase-functions": "^6.3.1",
     "js-file-download": "^0.4.12",
     "next": "15.1.4",
+    "node": "^23.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-select": "^5.10.0",
