--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,8 @@
     "node": "^23.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-select": "^5.10.0",
-    "react-pdf": "^9.2.1"
+    "react-pdf": "^9.2.1",
+    "react-select": "^5.10.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
