--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "firebase": "^11.1.0",
     "firebase-functions": "^6.3.1",
     "js-file-download": "^0.4.12",
-    "next": "15.1.4",
+    "next": "^15.5.6",
     "node": "^23.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
